[package]
name    = "esp-rust-board"
version = "0.1.0"
edition = "2021"

[dependencies]
riscv-rt   = "0.9.0"
shared-bus = { version = "0.2.4",  features = ["xtensa"] }
shtcx      = { version = "0.10.0", optional = true }
smart-leds = { version = "0.3.0",  optional = true }

[dependencies.esp32c3-hal]
git     = "https://github.com/esp-rs/esp-hal/"
package = "esp32c3-hal"
rev     = "1655e36"

[dependencies.esp-backtrace]
git      = "https://github.com/esp-rs/esp-backtrace"
rev      = "9eb1cb4"
features = ["esp32c3", "exception-handler", "panic-handler", "print-jtag-serial"]

[dependencies.icm42670]
git      = "https://github.com/jessebraham/icm42670/"
rev      = "eb0483b"
optional = true

[features]
default  = ["sensors", "smartled"]
sensors  = ["icm42670", "shtcx"]
smartled = ["smart-leds"]
