[package]
name    = "esp-rust-board"
version = "0.1.0"
edition = "2021"

[dependencies]
esp-backtrace = { version = "0.2.0", features = ["esp32c3", "exception-handler", "panic-handler", "print-jtag-serial"] }
esp-println   = { version = "0.3.0", features = ["esp32c3"] }
esp32c3-hal   = "0.1.0"
icm42670      = { version = "0.1.0",  optional = true }
riscv-rt      = "0.9.0"
shared-bus    = { version = "0.2.4",  optional = true, features = ["xtensa"] }
shtcx         = { version = "0.10.0", optional = true }
smart-leds    = { version = "0.3.0",  optional = true }

[features]
default  = ["sensors", "smartled"]
sensors  = ["icm42670", "shared-bus", "shtcx"]
smartled = ["esp32c3-hal/smartled", "smart-leds"]
